Use SEALION as an LLM

--- a/SEALION_RAG.ipynb
+++ b/SEALION_RAG.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7bad07ac-e802-4732-96ea-310dbf9249fd",
    "metadata": {
     "execution": {
@@ -154,28 +154,27 @@
     "embedding_model = HuggingFaceEmbeddings(model_name=\"intfloat/multilingual-e5-base\")\n",
     "\n",
     "PROMPT_TEMPLATE = \"\"\"\n",
-    "You are a helpful loan officer. Use the information below to match the user's profile with suitable loan products from the brochure.\n",
+    "You are a helpful loan officer. Your job is to recommend suitable loans based **only** on the customer profile and the available loan products below. Do **not** use any outside knowledge.\n",
     "\n",
-    "Speak **in Khmer**. Use short, clear sentences. Avoid technical terms and do not over-explain. No bold or italic formatting.\n",
+    "Always respond in Khmer if the context is in Khmer. Use short, clear sentences. Do not summarize the context or mention its existence.\n",
     "\n",
-    "User Information:\n",
+    "Customer Profile:\n",
     "- Location: {location}\n",
     "- Monthly Income: ${monthly_income}\n",
     "- Business Age: {business_age_months} months\n",
     "- Collateral: {collateral}\n",
     "- Existing Loans: {existing_loans}\n",
     "\n",
-    "Loan Brochure:\n",
+    "Available Loan Products:\n",
     "{context}\n",
     "\n",
     "Instructions:\n",
-    "1. List the loan products the user qualifies for.\n",
-    "2. Briefly explain why they qualify.\n",
-    "3. If they don’t qualify, explain why.\n",
-    "4. Keep the answer short and easy to understand.\n",
-    "5. Do not answer anything you dont have the context to.\n",
+    "- List the loan products the customer qualifies for.\n",
+    "- Briefly explain the reason for each match.\n",
+    "- If none qualify, explain why.\n",
+    "- Use only information from the \"Available Loan Products\" section.\n",
+    "- Never invent or assume anything not stated in the context.\n",
     "\"\"\"\n",
-    "\n",
     "\n",
     "\n",
     "\n",
